[gd_scene load_steps=23 format=2]

[ext_resource path="res://Fonts/chango-60.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Volume.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Start.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Username.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Global.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Chango-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Music/Komiku_-_12_-_Bicycle.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Settings.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Back.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Brightness.gd" type="Script" id=12]
[ext_resource path="res://Scenes/MenuButtons.gd" type="Script" id=13]
[ext_resource path="res://Scenes/settings_back.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.917969, 0.917969, 0.917969, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 8 )

[node name="Game" type="Node2D"]

[node name="BackGround" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="BackGround"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.823529, 0.823529, 0.823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="Label" type="Label" parent="UI"]
margin_top = 300.0
margin_right = 576.0
margin_bottom = 425.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "LookOut"
align = 1
valign = 1

[node name="MenuButtons" type="Node2D" parent="UI"]
script = ExtResource( 13 )

[node name="Menu" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 0, 475 )
script = ExtResource( 5 )

[node name="Start menu" type="VBoxContainer" parent="UI/MenuButtons/Menu"]
margin_right = 576.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MenuButtons/Menu/Start menu"]
margin_right = 576.0
margin_bottom = 79.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="UI/MenuButtons/Menu/Start menu"]
margin_top = 83.0
margin_right = 576.0
margin_bottom = 162.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoard" type="Button" parent="UI/MenuButtons/Menu/Start menu"]
margin_top = 166.0
margin_right = 576.0
margin_bottom = 245.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Leaderboard"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Menu"]

[node name="Settings" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 576, 475 )
script = ExtResource( 10 )

[node name="Settings menu" type="VBoxContainer" parent="UI/MenuButtons/Settings"]
margin_right = 576.0
margin_bottom = 411.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Button" parent="UI/MenuButtons/Settings/Settings menu"]
margin_right = 576.0
margin_bottom = 79.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Username"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brightness" type="Button" parent="UI/MenuButtons/Settings/Settings menu"]
margin_top = 83.0
margin_right = 576.0
margin_bottom = 162.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Brightness"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Button" parent="UI/MenuButtons/Settings/Settings menu"]
margin_top = 166.0
margin_right = 576.0
margin_bottom = 245.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Volume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colour" type="Button" parent="UI/MenuButtons/Settings/Settings menu"]
margin_top = 249.0
margin_right = 576.0
margin_bottom = 328.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Colour"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="Button" parent="UI/MenuButtons/Settings/Settings menu"]
margin_top = 332.0
margin_right = 576.0
margin_bottom = 411.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Copyright"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Settings"]

[node name="Volume" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 1152, 312 )
script = ExtResource( 3 )

[node name="background" type="Node2D" parent="UI/MenuButtons/Volume"]

[node name="Panel" type="Panel" parent="UI/MenuButtons/Volume/background"]
margin_left = 13.0
margin_right = 563.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="UI/MenuButtons/Volume/background"]
margin_left = 23.0
margin_top = 200.0
margin_right = 553.0
margin_bottom = 250.0
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MenuButtons/Volume/background"]
margin_top = 50.0
margin_right = 576.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Volume"]

[node name="Username" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 2304, 312 )
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="UI/MenuButtons/Username"]
margin_right = 550.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MenuButtons/Username"]
margin_top = 50.0
margin_right = 576.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Username"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/MenuButtons/Username"]
margin_left = 25.0
margin_top = 235.0
margin_right = 525.0
margin_bottom = 245.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Username"]

[node name="LineEdit" type="LineEdit" parent="UI/MenuButtons/Username"]
margin_left = 25.0
margin_top = 180.452
margin_right = 525.0
margin_bottom = 241.452
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
max_length = 14
clear_button_enabled = true
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_back" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 1152, 0 )
script = ExtResource( 14 )

[node name="Back" type="Button" parent="UI/MenuButtons/settings_back"]
light_mask = 513
margin_right = 144.0
margin_bottom = 125.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/settings_back"]

[node name="back" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 11 )

[node name="Back" type="Button" parent="UI/MenuButtons/back"]
margin_left = 576.0
margin_right = 720.0
margin_bottom = 125.0
focus_mode = 0
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/back"]

[node name="Brightness" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 1728, 312 )
script = ExtResource( 12 )

[node name="Panel" type="Panel" parent="UI/MenuButtons/Brightness"]
margin_right = 550.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="UI/MenuButtons/Brightness"]
margin_left = 13.0
margin_top = 200.0
margin_right = 543.0
margin_bottom = 250.0
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MenuButtons/Brightness"]
margin_top = 50.0
margin_right = 576.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Brightness"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Brightness"]

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="UI/MenuButtons/Menu/Start menu/Start" to="UI/MenuButtons" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Menu/Start menu/Settings" to="UI/MenuButtons" method="Settings_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Settings/Settings menu/Username" to="UI/MenuButtons" method="username_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Settings/Settings menu/Brightness" to="UI/MenuButtons" method="Brighness_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Settings/Settings menu/Volume" to="UI/MenuButtons" method="volume_pressed"]
[connection signal="value_changed" from="UI/MenuButtons/Volume/background/HSlider" to="UI/MenuButtons" method="_on_HSlider_value_changed"]
[connection signal="text_entered" from="UI/MenuButtons/Username/LineEdit" to="UI/MenuButtons" method="username_entered"]
[connection signal="pressed" from="UI/MenuButtons/settings_back/Back" to="UI/MenuButtons" method="settings_back_pressed"]
[connection signal="pressed" from="UI/MenuButtons/back/Back" to="UI/MenuButtons" method="back_pressed"]
